--- a/SIMULATION.ipynb
+++ b/SIMULATION.ipynb
@@ -2,15 +2,273 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Info    : Meshing 1D...\n",
+      "Info    : [  0%] Meshing curve 1 (Line)\n",
+      "Info    : [ 10%] Meshing curve 2 (Line)\n",
+      "Info    : [ 20%] Meshing curve 3 (Line)\n",
+      "Info    : [ 20%] Meshing curve 4 (Line)\n",
+      "Info    : [ 30%] Meshing curve 5 (Line)\n",
+      "Info    : [ 40%] Meshing curve 6 (Line)\n",
+      "Info    : [ 40%] Meshing curve 7 (Line)\n",
+      "Info    : [ 50%] Meshing curve 8 (Line)\n",
+      "Info    : [ 60%] Meshing curve 9 (Line)\n",
+      "Info    : [ 60%] Meshing curve 10 (Line)\n",
+      "Info    : [ 70%] Meshing curve 11 (Line)\n",
+      "Info    : [ 70%] Meshing curve 12 (Line)\n",
+      "Info    : [ 80%] Meshing curve 13 (Line)\n",
+      "Info    : [ 90%] Meshing curve 14 (Line)\n",
+      "Info    : [ 90%] Meshing curve 15 (Line)\n",
+      "Info    : [100%] Meshing curve 16 (Line)\n",
+      "Info    : Done meshing 1D (Wall 0.000617098s, CPU 0.000898s)\n",
+      "Info    : Meshing 2D...\n",
+      "Info    : [  0%] Meshing surface 1 (Plane, Frontal-Delaunay)\n",
+      "Info    : [ 30%] Meshing surface 2 (Plane, Frontal-Delaunay)\n",
+      "Info    : [ 60%] Meshing surface 3 (Plane, Frontal-Delaunay)\n",
+      "Info    : [ 80%] Meshing surface 4 (Plane, Frontal-Delaunay)\n",
+      "Info    : Done meshing 2D (Wall 0.00468196s, CPU 0.004826s)\n",
+      "Info    : 113 nodes 234 elements\n",
+      "Info    : Writing 'mesh.msh'...\n",
+      "Info    : Done writing 'mesh.msh'\n",
+      "Info    : Reading 'mesh.msh'...\n",
+      "Info    : 36 entities\n",
+      "Info    : 113 nodes\n",
+      "Info    : 234 elements\n",
+      "Info    : Done reading 'mesh.msh'\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "index -1 is out of bounds for axis 0 with size 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 36\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmpi4py\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m MPI\n\u001b[1;32m     35\u001b[0m \u001b[38;5;66;03m# Load mesh with correct geometric dimension\u001b[39;00m\n\u001b[0;32m---> 36\u001b[0m domain, cell_tags, facet_tags \u001b[38;5;241m=\u001b[39m \u001b[43mgmshio\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_from_msh\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mmesh.msh\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mMPI\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mCOMM_WORLD\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgdim\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     38\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMesh Loaded: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdomain\u001b[38;5;241m.\u001b[39mtopology\u001b[38;5;241m.\u001b[39mdim\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124mD with \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdomain\u001b[38;5;241m.\u001b[39mtopology\u001b[38;5;241m.\u001b[39mindex_map(\u001b[38;5;241m0\u001b[39m)\u001b[38;5;241m.\u001b[39msize_local\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m nodes and \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdomain\u001b[38;5;241m.\u001b[39mtopology\u001b[38;5;241m.\u001b[39mindex_map(domain\u001b[38;5;241m.\u001b[39mtopology\u001b[38;5;241m.\u001b[39mdim)\u001b[38;5;241m.\u001b[39msize_local\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m elements\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     41\u001b[0m \u001b[38;5;66;03m# Define function space for elasticity problem\u001b[39;00m\n",
+      "File \u001b[0;32m/usr/local/dolfinx-real/lib/python3.12/dist-packages/dolfinx/io/gmshio.py:488\u001b[0m, in \u001b[0;36mread_from_msh\u001b[0;34m(filename, comm, rank, gdim, partitioner)\u001b[0m\n\u001b[1;32m    486\u001b[0m gmsh\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39madd(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMesh from file\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    487\u001b[0m gmsh\u001b[38;5;241m.\u001b[39mmerge(\u001b[38;5;28mstr\u001b[39m(filename))\n\u001b[0;32m--> 488\u001b[0m msh \u001b[38;5;241m=\u001b[39m \u001b[43mmodel_to_mesh\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgmsh\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcomm\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrank\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgdim\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mgdim\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpartitioner\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpartitioner\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    489\u001b[0m gmsh\u001b[38;5;241m.\u001b[39mfinalize()\n\u001b[1;32m    490\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m msh\n",
+      "File \u001b[0;32m/usr/local/dolfinx-real/lib/python3.12/dist-packages/dolfinx/io/gmshio.py:309\u001b[0m, in \u001b[0;36mmodel_to_mesh\u001b[0;34m(model, comm, rank, gdim, partitioner, dtype)\u001b[0m\n\u001b[1;32m    306\u001b[0m perm_sort \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39margsort(cell_dimensions)\n\u001b[1;32m    308\u001b[0m \u001b[38;5;66;03m# Broadcast cell type data and geometric dimension\u001b[39;00m\n\u001b[0;32m--> 309\u001b[0m cell_id \u001b[38;5;241m=\u001b[39m cell_information[\u001b[43mperm_sort\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m    310\u001b[0m tdim \u001b[38;5;241m=\u001b[39m cell_information[perm_sort[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdim\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m    311\u001b[0m num_nodes \u001b[38;5;241m=\u001b[39m cell_information[perm_sort[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnum_nodes\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
+      "\u001b[0;31mIndexError\u001b[0m: index -1 is out of bounds for axis 0 with size 0"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import dolfinx\n",
+    "from dolfinx import fem, mesh, plot\n",
+    "import ufl\n",
+    "from mpi4py import MPI\n",
+    "import gmsh\n",
+    "import pyvista as pv\n",
+    "\n",
+    "# Define mesh parameters\n",
+    "gmsh.initialize()\n",
+    "gmsh.model.add(\"Silicon_Aluminum_UChannel\")\n",
+    "\n",
+    "# Define U-channel geometry (Aluminum)\n",
+    "lc = 0.01  # Mesh size\n",
+    "gmsh.model.occ.addRectangle(-0.05, -0.05, 0, 0.1, 0.01)  # Bottom\n",
+    "gmsh.model.occ.addRectangle(-0.05, -0.05, 0, 0.01, 0.1)  # Left wall\n",
+    "gmsh.model.occ.addRectangle(0.04, -0.05, 0, 0.01, 0.1)  # Right wall\n",
+    "\n",
+    "# Define Silicon Block\n",
+    "gmsh.model.occ.addRectangle(-0.02, -0.04, 0, 0.04, 0.08)  # Inside block\n",
+    "\n",
+    "# Synchronize geometry\n",
+    "gmsh.model.occ.synchronize()\n",
+    "\n",
+    "# Mesh the geometry\n",
+    "gmsh.model.mesh.generate(2)\n",
+    "gmsh.write(\"mesh.msh\")\n",
+    "gmsh.finalize()\n",
+    "\n",
+    "# Load mesh into FEniCS\n",
+    "from dolfinx.io import gmshio\n",
+    "from mpi4py import MPI\n",
+    "\n",
+    "# Load mesh with correct geometric dimension\n",
+    "domain, cell_tags, facet_tags = gmshio.read_from_msh(\"mesh.msh\", MPI.COMM_WORLD, 0, gdim=2)\n",
+    "\n",
+    "print(f\"Mesh Loaded: {domain.topology.dim}D with {domain.topology.index_map(0).size_local} nodes and {domain.topology.index_map(domain.topology.dim).size_local} elements\")\n",
+    "\n",
+    "\n",
+    "# Define function space for elasticity problem\n",
+    "V = fem.FunctionSpace(domain, ufl.VectorElement(\"Lagrange\", domain.ufl_cell(), 2))\n",
+    "\n",
+    "# Define material properties (Aluminum & Silicon)\n",
+    "E_al = 70e9  # Aluminum Young's modulus (Pa)\n",
+    "nu_al = 0.33  # Aluminum Poisson's ratio\n",
+    "\n",
+    "E_si = 160e9  # Silicon Young's modulus (Pa)\n",
+    "nu_si = 0.22  # Silicon Poisson's ratio\n",
+    "\n",
+    "# Define elasticity tensors\n",
+    "def elasticity(E, nu):\n",
+    "    mu = E / (2 * (1 + nu))\n",
+    "    lmbda = E * nu / ((1 + nu) * (1 - 2 * nu))\n",
+    "    return 2 * mu * ufl.sym(ufl.grad(ufl.TrialFunction(V))) + lmbda * ufl.div(ufl.TrialFunction(V)) * ufl.Identity(len(V))\n",
+    "\n",
+    "# Define boundary conditions\n",
+    "def left_wall(x): return np.isclose(x[0], -0.05)\n",
+    "def bottom(x): return np.isclose(x[1], -0.05)\n",
+    "def right_wall(x): return np.isclose(x[0], 0.05)\n",
+    "\n",
+    "bcs = [fem.dirichletbc(fem.Constant(domain, np.array([0.0, 0.0], dtype=np.float64)), fem.locate_dofs_geometrical(V, bottom))]\n",
+    "\n",
+    "# Define weak form for elasticity\n",
+    "u = ufl.TrialFunction(V)\n",
+    "v = ufl.TestFunction(V)\n",
+    "a = ufl.inner(elasticity(E_al, nu_al), ufl.grad(v)) * ufl.dx\n",
+    "L = ufl.inner(fem.Constant(domain, np.array([0, -1000], dtype=np.float64)), v) * ufl.dx  # Gravity Load\n",
+    "\n",
+    "# Solve elasticity problem\n",
+    "problem = fem.petsc.LinearProblem(a, L, bcs=bcs)\n",
+    "u_sol = problem.solve()\n",
+    "\n",
+    "# Extract displacement values\n",
+    "u_values = u_sol.x.array.reshape((-1, 2))\n",
+    "\n",
+    "# Convert mesh to PyVista for visualization\n",
+    "topology, cell_types, geometry = plot.create_vtk_mesh(domain, domain.topology.dim)\n",
+    "grid = pv.UnstructuredGrid(topology, cell_types, geometry)\n",
+    "grid[\"Displacement\"] = np.linalg.norm(u_values, axis=1)\n",
+    "\n",
+    "# Plot result\n",
+    "plotter = pv.Plotter()\n",
+    "plotter.add_mesh(grid, scalars=\"Displacement\", cmap=\"coolwarm\", show_edges=True)\n",
+    "plotter.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(dir(mesh_data))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dolfinx.io import gmshio\n",
+    "from mpi4py import MPI\n",
+    "\n",
+    "# Load mesh data\n",
+    "mesh_data = gmshio.read_from_msh(\"mesh.msh\", MPI.COMM_WORLD, 0, gdim=2)\n",
+    "\n",
+    "# Extract the actual mesh from `mesh_data`\n",
+    "domain = mesh_data.mesh\n",
+    "\n",
+    "# Check if `mesh_data` contains tagging information\n",
+    "if hasattr(mesh_data, \"cell_markers\"):\n",
+    "    cell_tags = mesh_data.cell_markers\n",
+    "else:\n",
+    "    cell_tags = None\n",
+    "\n",
+    "if hasattr(mesh_data, \"facet_markers\"):\n",
+    "    facet_tags = mesh_data.facet_markers\n",
+    "else:\n",
+    "    facet_tags = None\n",
+    "\n",
+    "# Print mesh details\n",
+    "print(f\"Mesh Loaded: {domain.topology.dim}D with {domain.topology.index_map(0).size_local} nodes and {domain.topology.index_map(domain.topology.dim).size_local} elements\")\n",
+    "\n",
+    "# Print extracted tags\n",
+    "print(f\"Cell Tags: {cell_tags}\")\n",
+    "print(f\"Facet Tags: {facet_tags}\")\n",
+    "print(domain)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(domain)\n",
+    "print(domain.geometry.x.shape)  # Check node coordinates\n",
+    "print(domain.topology.dim)  # Check mesh dimension\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dolfinx\n",
+    "import pyvista as pv\n",
+    "import numpy as np\n",
+    "\n",
+    "# For headless environments: Use off-screen rendering\n",
+    "pv.start_xvfb()  # Requires Xvfb installation (apt-get install xvfb)\n",
+    "\n",
+    "# Extract mesh data\n",
+    "topology, cell_types, geometry = dolfinx.plot.vtk_mesh(domain, domain.topology.dim)\n",
+    "\n",
+    "# Create PyVista grid\n",
+    "grid = pv.UnstructuredGrid(topology, cell_types, geometry)\n",
+    "\n",
+    "# Plot without GUI display\n",
+    "plotter = pv.Plotter(off_screen=True)  # <-- Critical change\n",
+    "plotter.add_mesh(grid, show_edges=True, color=\"white\")\n",
+    "plotter.view_xy()\n",
+    "\n",
+    "# Save to file instead of interactive display\n",
+    "plotter.screenshot(\"mesh.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dolfinx\n",
+    "import pyvista as pv\n",
+    "import numpy as np\n",
+    "\n",
+    "# Extract PyVista-compatible data using the updated function name\n",
+    "topology, cell_types, geometry = dolfinx.plot.vtk_mesh(domain, domain.topology.dim)\n",
+    "\n",
+    "# Create a PyVista UnstructuredGrid\n",
+    "grid = pv.UnstructuredGrid(topology, cell_types, geometry)\n",
+    "\n",
+    "# Plot the mesh\n",
+    "plotter = pv.Plotter()\n",
+    "plotter.add_mesh(grid, show_edges=True, color=\"white\")\n",
+    "plotter.view_xy()\n",
+    "plotter.show()\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "dolfinx-env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
